src/objects/Project_Updates__c.object
<CustomObject>
    <description>Initially created to store notes from the weekly implementation review calls.</description>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipLabel>Project Updates</relationshipLabel>
        <relationshipName>Project_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <description>Initially used to capture meeting notes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Update</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <label>Project Update</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Updates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>